<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">裁判说</string>

    <string name="title_home">首页</string>
    <string name="title_judge">裁判说</string>
    <string name="title_market">积分</string>
    <string name="title_mine">我的</string>
    <string name="sign_in">sign in</string>
    <string name="mine_item_icon">mine item icon</string>
    <string name="level">LV：2</string>
    <string name="user_id">UID：120</string>
    <string name="user_photo">user photo</string>
    <string name="fans">粉丝</string>
    <string name="total_sign">累计签到</string>
    <string name="moth_sign">本月签到</string>
    <string name="number">225</string>
    <string name="focus">关注</string>
    <string name="whistle_title">我的哨子</string>
    <string name="mine_message">我的消息</string>
    <string name="public_message">公共消息</string>
    <string name="personal_message">私人消息</string>
    <string name="my_topic">我的主题</string>
    <string name="published_topic">我发表的</string>
    <string name="replied_topic">我回复的</string>
    <string name="my_favorite">我的收藏</string>
    <string name="setting">设置</string>
    <string name="mine">我的</string>
    <string name="medal_center">勋章中心</string>
    <string name="my_history">我的足迹</string>
    <string name="clear_all">全部清空</string>
    <string name="back_icon">back icon</string>
    <string name="ignore_unread">忽略未读</string>


    <!--   ——————————登录 —————————— -->
    <string name="username">用户名/email</string>
    <string name="password">密码</string>
    <string name="code">输入验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="find_psw">找回密码</string>
    <string name="question">安全提问(未设置请忽略)</string>
    <string name="mather_name">母亲的名字</string>
    <string name="grandfather_name">爷爷的名字</string>
    <string name="father_city">父亲出生的城市</string>
    <string name="teacher_name">您其中一位老师的名字</string>
    <string name="computer_model">您个人计算机的型号</string>
    <string name="food_name">您最喜欢的餐馆名称</string>
    <string name="last_four">驾驶执照最后四位数</string>
    <string name="whistle_image">whistle image</string>
    <string name="whistle_rules">获取规则</string>
    <string name="register_now">立即注册</string>
    <string name="find_password">找回密码</string>

    <!--————————注册——————————-->
    <string name="regsiter_username">用户名:不得小于3个字</string>
    <string name="regsiter_password">密码:最小长度为6个字符</string>
    <string name="confirm_password">确认密码:请再次输入密码</string>
    <string name="email">Email:请输入邮箱地址</string>
    <string name="phone">手机号:请输入11位手机号</string>
    <string name="message_code">短信验证码</string>
    <string name="register_bottom_message">如果您已拥有 裁判说Caipanshuo ID，则可在此</string>
    <string name="action_name">动作名称</string>
    <string name="period">周期范围</string>
    <string name="reward_time">奖励次数</string>
    <string name="reword_content">奖励内容</string>
    <string name="emails">email</string>
    <string name="user">用户名</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_password">请输入账号密码</string>
    <string name="hint_confirm">请确认账号密码</string>
    <string name="isequal">两次输入密码不相同</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="hint_phoneCode">请输入手机验证码</string>
    <string name="hint_code">请输入随机验证码</string>
    <string name="product_username">请输入姓名</string>
    <string name="product_qq">请输入QQ号</string>
    <string name="product_phonee">请输入手机号</string>
    <string name="product_adress">请输入地址</string>
  
    <!-- ——————   积分商城  —————-->
    <string name="me">我的</string>
    <string name="myproduct">我的商品</string>
    <string name="all_product">全部商品</string>
    <string name="product_detail">商品详情</string>
    <string name="virtualCard">虚拟卡片</string>
    <string name="videoMembers">视频会员</string>
    <string name="technology">数码周边</string>
    <string name="gameExtensions">游戏周边</string>
    <string name="goods_category">商品分类:</string>
    <string name="goods_price">市场价格:</string>
    <string name="receive_address">收货地址</string>
    <string name="name">姓名:</string>
    <string name="qq">QQ:</string>
    <string name="phone_number">手机:</string>
    <string name="address">地址:</string>
    <string name="edit_name">编辑姓名</string>
    <string name="edit_gender">编辑性别</string>
    <string name="edit_birthday">编辑生日</string>
    <string name="edit_address">编辑地址</string>
    <string name="edit_phone">编辑号码</string>
    <string name="edit_QQ">编辑QQ</string>
    <string name="complete">完成</string>
    <string name="exchange">兑换</string>
    <string name="manual_granted">人工授予</string>
    <string name="no_medal">您还没有获得过勋章</string>
    <string name="mine_medal">我的勋章</string>
    <string name="kucun">库存</string>
    <string name="consume">兑换了</string>
    <string name="whistle">铜哨子</string>

    <!-- ——————   裁判说  —————-->
    <string name="attention">关注</string>
    <string name="plate">主版</string>
    <string name="recommend">推荐</string>
    <string name="information">资讯</string>
    <string name="subscribe">订阅</string>
    <string name="subscribed">已订阅</string>
    <string name="today">当日</string>
    <string name="currentWeek">本周</string>
    <string name="currentMonth">当月</string>
    <string name="judge_is_waiting">裁判说等你电话</string>
    <string name="friend_tip">你们还不是好友，每天只能发送5条消息</string>
    <string name="add_friend">加为好友</string>
    <string name="newest">最新</string>
    <string name="hot">热门</string>
    <string name="hotcard">热帖</string>
    <string name="essence">精华</string>
    <string name="friends">好友</string>
    <string name="message_hint">请输入您要说的话</string>
    <string name="post">签到</string>
    <string name="sign">发帖</string>

    <!--    发帖   -->
    <string name="publish">发表</string>
    <string name="hint">写写我今天想说的...</string>
    <string name="title">标题</string>
    <string name="content">请输入正文内容</string>
    <string name="more">更多</string>
    <string name="sumile">心情图片</string>
    <string name="emoji">表情包</string>
    <string name="nosend">未发货</string>
    <string name="requet">申请退货</string>
    <string name="success">成功退货</string>
    <string name="reject">退货驳回</string>
    <string name="send">已发货</string>
    <string name="receive">已收货</string>
    <string name="exchange_success">兑换成功</string>
    <string name="loading">加载中...</string>
    <string name="login_times">登录次数：</string>
    <string name="last_login_time">上次登录：</string>
    <string name="register_date">注册时间：</string>
    <string name="contribute">投稿到板块</string>
    <string name="attention_plate">关注板块</string>
    <string name="recommend_plate">推荐板块</string>
    <string name="news_detail">资讯详情</string>


</resources>
