<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:gravity="center_vertical"
              android:padding="@dimen/dp_10"
              android:layout_height="match_parent">
	<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:gravity="center"
			android:textSize="@dimen/text_16"
			android:textStyle="bold"
			android:text="@string/action_name"
			android:layout_height="wrap_content"/>
	<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:gravity="center"
			android:textSize="@dimen/text_16"
			android:textStyle="bold"
			android:text="@string/period"
			android:layout_height="wrap_content"/>
	<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:gravity="center"
			android:textSize="@dimen/text_16"
			android:textStyle="bold"
			android:text="@string/reward_time"
			android:layout_height="wrap_content"/>
	<TextView
			android:layout_weight="1"
			android:layout_width="0dp"
			android:gravity="center"
			android:textSize="@dimen/text_16"
			android:textStyle="bold"
			android:text="@string/reword_content"
			android:layout_height="wrap_content"/>
</LinearLayout>