<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="user" type="com.judge.data.User"/>
    </data>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dp_20"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/bg_mine_title"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/dp_30"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_60"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/app_name"
                    android:textSize="@dimen/text_20"
            />
            <TextView
                    android:id="@+id/user_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name"
                    android:textSize="@dimen/text_14"
                    android:textColor="@color/white"
                    android:text="@string/level"
            />
            <ImageView
                    android:id="@+id/photo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/default_photo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:contentDescription="@string/user_photo"/>
            <TextView
                    android:id="@+id/userId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_id"
                    android:textSize="@dimen/text_18"
                    app:layout_constraintTop_toBottomOf="@id/photo_image"
                    app:layout_constraintRight_toRightOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@drawable/bg_item"
                      android:layout_marginTop="@dimen/dp_120"
                      android:layout_marginStart="@dimen/dp_20"
                      android:layout_marginEnd="@dimen/dp_20"
                      android:layout_gravity="bottom"
                      android:gravity="center"
        >
            <LinearLayout
                    android:id="@+id/friendLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >
                <TextView
                        android:id="@+id/friendsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold"
                        android:text="@string/number"
                        android:gravity="center"
                />
                <TextView
                        android:text="@string/friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/fansLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >
                <TextView
                        android:id="@+id/fansNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold"
                        android:text="@string/number"
                        android:gravity="center"
                />
                <TextView
                        android:text="@string/fans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/focusLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
            >
                <TextView
                        android:id="@+id/focusNumber"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:gravity="center"
                        android:text="@string/focus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/signLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.2"
                    android:gravity="center"
            >
                <TextView
                        android:id="@+id/mothSignNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold"
                        android:text="@string/number"
                        android:gravity="center"
                />
                <TextView
                        android:gravity="center"
                        android:text="@string/moth_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/totalSignLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.2"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:gravity="center"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold"
                        android:text="@string/number"
                        android:gravity="center"
                />
                <TextView
                        android:gravity="center"
                        android:text="@string/total_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>