<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/market"
            app:startDestination="@id/marketFragment"
            tools:ignore="UnusedNavigation">

    <fragment android:id="@+id/marketFragment"
              android:name="com.judge.app.fragments.market.MarketFragment"
              android:label="@string/all_product">
        <action android:id="@+id/action_marketFragment_to_myProductFragment"
                app:destination="@id/myfragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>

        <action android:id="@+id/action_marketFragments_to_productDetailsFragment"
                app:destination="@id/product_details"
                app:enterAnim="@anim/anim_enter"
                app:exitAnim="@anim/anim_exit"
                app:popEnterAnim="@anim/anim_pop_enter"
                app:popExitAnim="@anim/anim_pop_exit"/>

    </fragment>

    <fragment android:id="@+id/myfragment"
              android:name="com.judge.app.fragments.market.MyProductFragment"
              android:label="@string/myproduct"/>

    <fragment android:id="@+id/product_details"
              android:name="com.judge.app.fragments.market.ProductDetailsFragment"
              android:label="@string/product_detail">

        <action android:id="@+id/action_marketFragments_to_exchangeSuccessFragment"
                app:destination="@id/exchangeSuccessFragment"
                app:enterAnim="@anim/anim_enter"
                app:exitAnim="@anim/anim_exit"
                app:popEnterAnim="@anim/anim_pop_enter"
                app:popExitAnim="@anim/anim_pop_exit"/>
    </fragment>
    <fragment android:id="@+id/exchangeSuccessFragment"
              android:name="com.judge.app.fragments.market.ExchangeSuccessFragment"
              android:label="兑换成功">
        <action android:id="@+id/action_exchangeSuccessFragment_to_marketFragment"
                app:destination="@id/marketFragment"
                app:enterAnim="@anim/anim_enter"
                app:exitAnim="@anim/anim_exit"
                app:popEnterAnim="@anim/anim_pop_enter"
                app:popExitAnim="@anim/anim_pop_exit"/>
    </fragment>


</navigation>