<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="35sp"
                tools:ignore="RelativeOverlap" />

        <LinearLayout
                android:id="@+id/register_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                tools:ignore="RtlHardcoded">

            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:background="@drawable/left"
                    tools:ignore="ContentDescription" />
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_title">

        <LinearLayout
                android:id="@+id/ll_bg"
                android:layout_width="match_parent"
                android:layout_height="680dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="33dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/login_content_border"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

            <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/regsiter_username"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/regsiter_password"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/confirm_password"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/email"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/phone"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <EditText
                    android:id="@+id/et_message_code"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg"
                    android:hint="@string/message_code"
                    android:maxLength="16"
                    android:padding="10dp"
                    android:textColor="#d4cdca"
                    tools:ignore="Autofill,TextFields" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/login_input_bg">

                <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/login_input_bg"
                        android:hint="@string/code"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#d4cdca"
                        tools:ignore="Autofill,TextFields" />

                <ImageView
                        android:id="@+id/btn_get_code"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        tools:ignore="ContentDescription" />
            </RelativeLayout>

        </LinearLayout>

        <ImageView
                android:id="@+id/iv_register"
                android:layout_width="239dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/reister_submit"
                tools:ignore="ContentDescription" />
    </FrameLayout>
    <!--<TextView-->
            <!--android:id="@+id/tv_about_spannable"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="33dp"-->
            <!--android:layout_marginRight="33dp"-->
            <!--android:textColor="#a7a19e"-->
            <!--android:text="@string/register_bottom_message"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"/>-->
    <!--<TextView-->
            <!--android:id="@+id/tv_login"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/login"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--app:layout_constraintLeft_toRightOf="@id/tv_about_spannable"-->
            <!--app:layout_constraintTop_toTopOf="@id/tv_about_spannable"-->
            <!--app:layout_constraintBottom_toBottomOf="@id/tv_about_spannable"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>