<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg">

    <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="594dp"
            android:layout_gravity="center"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="150dp"
            android:orientation="vertical"
            android:background="@drawable/login_content_border">

        <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/login_input_bg"
                android:hint="@string/username"
                android:padding="10dp"
                android:maxLength="16"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/login_input_bg"
                android:hint="@string/password"
                android:padding="10dp"
                android:layout_marginTop="36dp"
                android:maxLength="16"/>


        <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/login_input_bg"
                android:hint="@string/code"
                android:padding="10dp"
                android:maxLength="16"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="174dp"
            android:layout_height="174dp"
            android:background="@drawable/login_border"
            android:gravity="center"
            app:layout_anchor="@id/content"
            app:layout_anchorGravity="top|center">

        <ImageView
                android:id="@+id/login_header"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/login_header"
                android:layout_gravity="center"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/login"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:background="@drawable/login_btn"
            app:layout_anchor="@id/content"
            app:layout_anchorGravity="bottom|center"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>